syntax = "proto3";
package entry_pb;
option go_package = "./entry_pb";

message Entry{
  string full_path = 1;
  string set = 2;
  int64 mtime = 3;
  int64 ctime = 4;
  uint32 mode = 5;
  string mine = 6;
  bytes md5 = 7;
  uint64 file_size = 8;
  repeated Chunk chunks = 9;
}

message Chunk{
  uint64 offset = 1;
  uint64 size = 2;
  bytes md5 = 3;
  bool is_replication = 4;
  repeated Frag frags = 5;
}

message Frag {
  uint64 size = 1;
  int64 id = 2;
  bytes md5 = 3;
  bool is_dataShard = 4;
  string fid = 5;
}